fix case where prefs could not exist and we'd get uninitialzed values for opening tabs/windows with cmd-click. (bug 283363)